comment page graphic updateed